<resources>
    <string name="app_name">Tugas</string>
    <string name="pendaftaran">PENDAFTARAN</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="tempat_lahir">Tanggal Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="Jenis_Kelamin">Jenis Kelamin</string>
    <string name="jk_laki">Laki-laki</string>
    <string name="jk_perempuam">Perempuan</string>
    <string name="agama">Agama</string>
    <string name="agama_islam">Islam</string>
    <string name="agama_katolik">Katolik</string>
    <string name="agama_buddha">Buddha</string>
    <string name="agama_ak">Aliran Kepercayaan</string>
    <string name="agama_kristen">Kristen</string>
    <string name="agama_hindu">Hindu</string>
    <string name="agama_kong">Konghucu</string>
    <string name="telepon">Telepon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mk_pass">Masukkan Password Kembali</string>
    <string name="kembali">KEMBALI</string>
    <string name="dafrat">DAFTAR</string>
    <string name="invalid_name">Nama Depan Harus Diisi</string>
    <string name="invalid_belakang">Nama Belakang Harus Diisi</string>
    <string name="invalid_tl">Tempat Lahir Harus Diisi</string>
    <string name="invalid_alamat">Alamat Harus Diisi</string>
    <string name="invalid_telepon">Nomor Telepon Harus Diisi</string>
    <string name="invalid_email">Email Harus Diisi</string>
    <string name="invalid_password">Password Harus Diisi</string>
    <string name="invalid_ulangi">Confirm Password Harus Diisi</string>
    <string name="invalid_tanggal">Tanggal Lahir Harus Diisi</string>

</resources>
